--- a/src/resources/styles/_layout.scss
+++ b/src/resources/styles/_layout.scss
@@ -32,7 +32,7 @@ html {
 }
 
 body {
-	font-family: var(--m3-body-font-family, #{$body-font-family});
+	font-family: var(--oriso-body-font-family, #{$body-font-family});
 	background-color: var(
 		--skin-color-body-background,
 		var(--m3-surface, #{$body-bg})
